[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lon-nyc"
version = "0.1.0"
description = "Compare NYC and London hourly rain data from NOAA ISD"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.26",
    "botocore>=1.29",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3.10",
]

[project.scripts]
lon-nyc = "lon_nyc.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["lon_nyc"]
